--- a/docs/latex/refCntPtr_8h_source.tex
+++ b/docs/latex/refCntPtr_8h_source.tex
@@ -124,13 +124,13 @@
 \DoxyCodeLine{00344\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED,\ \textcolor{keyword}{typename}\ DELETER>}
 \DoxyCodeLine{00345\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ O\_DERIVED>}
 \DoxyCodeLine{00346\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_a6a675f488777908381084b8821efaf04}{refCntPtr<TYPE,\ DERIVED,\ DELETER>::operator==}}(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_af6dcf44ea5829187f10bab1efb89f2c4}{refCntPtr<TYPE,\ O\_DERIVED,\ DELETER>}}\&\ other)\textcolor{keyword}{\ const\ }\{}
-\DoxyCodeLine{00347\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}()\ ==\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}();}
+\DoxyCodeLine{00347\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_af019410de78661d25c19d3f2c2d9eac6}{get}}()\ ==\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_af019410de78661d25c19d3f2c2d9eac6}{get}}();}
 \DoxyCodeLine{00348\ \ \ \ \ \}}
 \DoxyCodeLine{00349\ }
 \DoxyCodeLine{00350\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED,\ \textcolor{keyword}{typename}\ DELETER>}
 \DoxyCodeLine{00351\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ O\_DERIVED>}
 \DoxyCodeLine{00352\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_a614ce0dae97e2a365ba62f9681b8d28e}{refCntPtr<TYPE,\ DERIVED,\ DELETER>::operator!=}}(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_af6dcf44ea5829187f10bab1efb89f2c4}{refCntPtr<TYPE,\ O\_DERIVED,\ DELETER>}}\&\ other)\textcolor{keyword}{\ const\ }\{}
-\DoxyCodeLine{00353\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}()\ !=\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}();}
+\DoxyCodeLine{00353\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_af019410de78661d25c19d3f2c2d9eac6}{get}}()\ !=\ other.\mbox{\hyperlink{classoriginal_1_1autoPtr_af019410de78661d25c19d3f2c2d9eac6}{get}}();}
 \DoxyCodeLine{00354\ \ \ \ \ \}}
 \DoxyCodeLine{00355\ }
 \DoxyCodeLine{00356\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DERIVED,\ \textcolor{keyword}{typename}\ DELETER>}
@@ -142,7 +142,7 @@
 \DoxyCodeLine{00362\ \ \ \ \ std::string\ \mbox{\hyperlink{classoriginal_1_1refCntPtr_a2b6187e87b8d807c0049a0c415e07adc}{refCntPtr<TYPE,\ DERIVED,\ DELETER>::toString}}(\textcolor{keyword}{const}\ \textcolor{keywordtype}{bool}\ enter)\textcolor{keyword}{\ const\ }\{}
 \DoxyCodeLine{00363\ \ \ \ \ \ \ \ \ std::stringstream\ ss;}
 \DoxyCodeLine{00364\ \ \ \ \ \ \ \ \ ss\ <<\ this-\/>\mbox{\hyperlink{classoriginal_1_1refCntPtr_a062a5a1b9488f4de5927ebecb9eb49e3}{className}}()\ <<\ \textcolor{stringliteral}{"{}("{}};}
-\DoxyCodeLine{00365\ \ \ \ \ \ \ \ \ ss\ <<\ \mbox{\hyperlink{classoriginal_1_1printable_af9c95c33d1f0abc8188d2c594e879fb6}{printable::formatString}}(this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a4bf90c963949edebb3cfbbe739092c60}{get}}())\ <<\ \textcolor{stringliteral}{"{},\ "{}};}
+\DoxyCodeLine{00365\ \ \ \ \ \ \ \ \ ss\ <<\ \mbox{\hyperlink{classoriginal_1_1printable_af9c95c33d1f0abc8188d2c594e879fb6}{printable::formatString}}(this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_af019410de78661d25c19d3f2c2d9eac6}{get}}())\ <<\ \textcolor{stringliteral}{"{},\ "{}};}
 \DoxyCodeLine{00366\ \ \ \ \ \ \ \ \ ss\ <<\ \textcolor{stringliteral}{"{}strong\ ref:\ "{}}\ <<\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_a308b395bd56c69c84cb6d2f5f661dbe1}{strongRefs}}()\ <<\ \textcolor{stringliteral}{"{},\ "{}}\ <<\ \textcolor{stringliteral}{"{}weak\ ref:\ "{}}\ <<\ this-\/>\mbox{\hyperlink{classoriginal_1_1autoPtr_ac49b1da32d59049a6e64493746f512d6}{weakRefs}}();}
 \DoxyCodeLine{00367\ \ \ \ \ \ \ \ \ ss\ <<\ \textcolor{stringliteral}{"{})"{}};}
 \DoxyCodeLine{00368\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (enter)}
@@ -323,7 +323,7 @@
 \DoxyCodeLine{00543\ \ \ \ \ \}}
 \DoxyCodeLine{00544\ }
 \DoxyCodeLine{00545\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ DELETER>}
-\DoxyCodeLine{00546\ \ \ \ \ TYPE\ \&\ \mbox{\hyperlink{classoriginal_1_1weakPtr_ac3b34c22a2970b28b0fe0aaee483fe0e}{weakPtr<TYPE,\ DELETER>::operator[]}}(\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\_integer}}\ index)\ \{}
+\DoxyCodeLine{00546\ \ \ \ \ TYPE\&\ \mbox{\hyperlink{classoriginal_1_1weakPtr_ac3b34c22a2970b28b0fe0aaee483fe0e}{weakPtr<TYPE,\ DELETER>::operator[]}}(\mbox{\hyperlink{namespaceoriginal_a2d678ae654034cea391c946ada41bd2e}{u\_integer}}\ index)\ \{}
 \DoxyCodeLine{00547\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ this-\/>\mbox{\hyperlink{classoriginal_1_1weakPtr_a82dfb2efb19c9dd7d56c7701e997d1ad}{lock}}().operator[](index);}
 \DoxyCodeLine{00548\ \ \ \ \ \}}
 \DoxyCodeLine{00549\ }
