--- a/docs/latex/allocator_8h.tex
+++ b/docs/latex/allocator_8h.tex
@@ -10,8 +10,7 @@ Memory allocation interface and implementations.
 {\ttfamily \#include "{}maths.\+h"{}}\newline
 {\ttfamily \#include "{}type\+\_\+traits"{}}\newline
 {\ttfamily \#include "{}utility"{}}\newline
-Include dependency graph for allocator.\+h\+:
-\nopagebreak
+Include dependency graph for allocator.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
