--- a/docs/latex/array_8h.tex
+++ b/docs/latex/array_8h.tex
@@ -12,8 +12,7 @@ Provides the {\ttfamily array} class for a fixed-\/size container with random ac
 {\ttfamily \#include "{}iteration\+Stream.\+h"{}}\newline
 {\ttfamily \#include "{}random\+Access\+Iterator.\+h"{}}\newline
 {\ttfamily \#include "{}error.\+h"{}}\newline
-Include dependency graph for array.\+h\+:
-\nopagebreak
+Include dependency graph for array.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
