--- a/docs/latex/blocksList_8h.tex
+++ b/docs/latex/blocksList_8h.tex
@@ -8,8 +8,7 @@ A block-\/based list implementation.
 {\ttfamily \#include "{}base\+List.\+h"{}}\newline
 {\ttfamily \#include "{}couple.\+h"{}}\newline
 {\ttfamily \#include "{}vector.\+h"{}}\newline
-Include dependency graph for blocks\+List.\+h\+:
-\nopagebreak
+Include dependency graph for blocks\+List.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
