--- a/docs/latex/classoriginal_1_1staticError_3_01original_1_1outOfBoundError_00_01TRIGGERING__CONDITION_01_4.tex
+++ b/docs/latex/classoriginal_1_1staticError_3_01original_1_1outOfBoundError_00_01TRIGGERING__CONDITION_01_4.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1staticError_3_01original_1_1outOfBoundError_00_01TRIGGERING__CONDITION_01_4}{}\label{classoriginal_1_1staticError_3_01original_1_1outOfBoundError_00_01TRIGGERING__CONDITION_01_4}\index{original::staticError$<$ original::outOfBoundError, TRIGGERING\_CONDITION $>$@{original::staticError$<$ original::outOfBoundError, TRIGGERING\_CONDITION $>$}}
 
 
-Collaboration diagram for original\+::static\+Error\texorpdfstring{$<$}{<} original\+::out\+Of\+Bound\+Error, TRIGGERING\+\_\+\+CONDITION \texorpdfstring{$>$}{>}\+:
-\nopagebreak
+Collaboration diagram for original\+::static\+Error\texorpdfstring{$<$}{<} original\+::out\+Of\+Bound\+Error, TRIGGERING\+\_\+\+CONDITION \texorpdfstring{$>$}{>}\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
