--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -122,7 +122,7 @@ Original是一个\+C++基础工具库,也是本人的第一个正式项目，用
 栈 stack，队列 queue，双端队列 deque，优先队列 prique\hypertarget{index_autotoc_md9}{}\doxysubsubsubsection{\texorpdfstring{算法适配器：}{算法适配器：}}\label{index_autotoc_md9}
 迭代器 iterator/iter\+Adaptor，变换器 transform/transform\+Stream，过滤器 filter/filter\+Stream，比较器 comparator\hypertarget{index_autotoc_md10}{}\doxysubsubsubsection{\texorpdfstring{编译期工具：}{编译期工具：}}\label{index_autotoc_md10}
 二元组 couple，多元组 tuple\hypertarget{index_autotoc_md11}{}\doxysubsubsubsection{\texorpdfstring{内存管理：}{内存管理：}}\label{index_autotoc_md11}
-自动指针 owner\+Ptr/strong\+Ptr/weak\+Ptr，分配器 allocator\+Base/allocator，删除器 deleter\+Base/deleter\hypertarget{index_autotoc_md12}{}\doxysubsubsection{\texorpdfstring{async\+IO}{async\+IO}}\label{index_autotoc_md12}
+自动指针 owner\+Ptr/strong\+Ptr/weak\+Ptr，分配器 allocator\+Base/allocator/obj\+Pool\+Allocator，删除器 deleter\+Base/deleter\hypertarget{index_autotoc_md12}{}\doxysubsubsection{\texorpdfstring{async\+IO}{async\+IO}}\label{index_autotoc_md12}
 计划实现，包含多线程和网络通信功能。\hypertarget{index_autotoc_md13}{}\doxysubsubsection{\texorpdfstring{matrix}{matrix}}\label{index_autotoc_md13}
 计划实现，包含张量，线性代数工具功能。\hypertarget{index_autotoc_md14}{}\doxysubsubsection{\texorpdfstring{graph}{graph}}\label{index_autotoc_md14}
 计划实现，包含图论结构和图算法。 
