--- a/docs/latex/filterStream_8h.tex
+++ b/docs/latex/filterStream_8h.tex
@@ -8,8 +8,7 @@ Composite filter operations with logical chaining.
 {\ttfamily \#include "{}filter.\+h"{}}\newline
 {\ttfamily \#include "{}chain.\+h"{}}\newline
 {\ttfamily \#include "{}ref\+Cnt\+Ptr.\+h"{}}\newline
-Include dependency graph for filter\+Stream.\+h\+:
-\nopagebreak
+Include dependency graph for filter\+Stream.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
