--- a/docs/latex/transformStream_8h.tex
+++ b/docs/latex/transformStream_8h.tex
@@ -8,8 +8,7 @@ Transform pipeline composition and execution.
 {\ttfamily \#include "{}transform.\+h"{}}\newline
 {\ttfamily \#include "{}chain.\+h"{}}\newline
 {\ttfamily \#include "{}ref\+Cnt\+Ptr.\+h"{}}\newline
-Include dependency graph for transform\+Stream.\+h\+:
-\nopagebreak
+Include dependency graph for transform\+Stream.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
