--- a/docs/latex/transform_8h.tex
+++ b/docs/latex/transform_8h.tex
@@ -9,8 +9,7 @@ Transformation classes for various operations on elements.
 {\ttfamily \#include "{}base\+List.\+h"{}}\newline
 {\ttfamily \#include "{}cloneable.\+h"{}}\newline
 {\ttfamily \#include "{}maths.\+h"{}}\newline
-Include dependency graph for transform.\+h\+:
-\nopagebreak
+Include dependency graph for transform.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
