--- a/docs/latex/classoriginal_1_1treeSet_1_1Iterator.tex
+++ b/docs/latex/classoriginal_1_1treeSet_1_1Iterator.tex
@@ -11,8 +11,7 @@ Bidirectional iterator for \doxylink{classoriginal_1_1treeSet}{tree\+Set}.
 
 
 
-Inheritance diagram for original\+::tree\+Set\texorpdfstring{$<$}{<} TYPE, Compare, ALLOC \texorpdfstring{$>$}{>}\+::Iterator\+:
-\nopagebreak
+Inheritance diagram for original\+::tree\+Set\texorpdfstring{$<$}{<} TYPE, Compare, ALLOC \texorpdfstring{$>$}{>}\+::Iterator\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -21,8 +20,7 @@ Inheritance diagram for original\+::tree\+Set\texorpdfstring{$<$}{<} TYPE, Compa
 \end{figure}
 
 
-Collaboration diagram for original\+::tree\+Set\texorpdfstring{$<$}{<} TYPE, Compare, ALLOC \texorpdfstring{$>$}{>}\+::Iterator\+:
-\nopagebreak
+Collaboration diagram for original\+::tree\+Set\texorpdfstring{$<$}{<} TYPE, Compare, ALLOC \texorpdfstring{$>$}{>}\+::Iterator\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
